--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="Codingcamp">
 
-    <title>Coding Champ</title>
+    <title>Codingcamp</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -164,8 +164,8 @@
     <!-- About Us Section -->
     <section id="about" >
         <div class="container">
-            <div class="row" style="margin-left: 10px; width: 500px;">
-                <div class="col-lg-6 text-left" style="margin-top: 0px; padding-left: 15px; padding-right: 5px; width: 430px; height: 260px; background-color: rgba(255, 255, 204, 0.75); padding-top: 10px;">
+            <div class="row" style="margin-left: 10px; width: 500px; margin-top:50px;">
+                <div class="col-lg-6 text-left" style="margin-top: 0px; padding-left: 15px; padding-right: 5px; width: 430px; height: 260px; background-color: rgba(255, 255, 255, 0.75); padding-top: 10px;">
 					<h2 class="section-heading">About Us</h2>
 					<h3 class="section-subheading"><span style="color: #E45009;">PT. Coding Indonesia</span> berdiri tahun <span style="color: #008AFF;">2013</span> menyusul kegembiraan anak-anak belajar <em>coding</em> pada program liburan. </h3>
                     <h3 class="section-subheading">Pada <span style="color: #008AFF;">2015</span>, <span style="color: #E45009;">PT. Coding Indonesia</span> mengelola tiga lokasi: <span style="color: #008AFF;">Cipete</span>, <span style="color: #008AFF;">Kemang</span> dan <span style="color: #008AFF;">Bintaro</span>, serta ekstrakurikuler di sekolah-sekolah swasta di DKI Jakarta. Lokasi berikutnya adalah Kelapa Gading dan Depok. </h3> 
@@ -284,10 +284,10 @@
     <!-- About Section -->
     <section id="program">
         <div class="container">
-            <div class="row">
+            <div class="row" style="margin-top:50px; margin-bottom:50px;">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Program</h2>
-                    <h3 class="section-subheading text-muted" style="margin-bottom: 40px;">Berikut ini beberapa program belajar di <span style="color: #E45009;">Codingchamp</span></h3>
+                    <h3 class="section-subheading text-muted" style="margin-bottom: 40px;">Berikut ini beberapa program belajar di <span style="color: #E45009;">Codingcamp</span></h3>
                 </div>
             </div>
 
@@ -373,7 +373,7 @@
                 <div class="col-lg-12 text-center" style="font-weight: 500;">
 					<h2 class="section-heading" style="color : #fff;">Adult Class</h2>
 					<hr class="light">
-					<h3 class="section-subheading" style="color : #fff;">This is description for Adult Class in Coding Champ.</h3>
+					<h3 class="section-subheading" style="color : #fff;">This is description for Adult Class in Codingcamp.</h3>
                 </div>
             </div>
         </div>
@@ -382,7 +382,7 @@
     <!-- Tutor Section -->
     <section id="tutor" class="bg-light-gray">
         <div class="container">
-            <div class="row">
+            <div class="row" style="margin-top:40px;">
                 <div class="col-lg-6">
                     <h1 class="section-heading text-center">Tutors</h1>
                 </div>
@@ -397,10 +397,10 @@
     <!-- Donation Section -->
     <section id="donate">
         <div class="container">
-            <div class="row">
+            <div class="row" style="margin-top:50px;">
 				<div class="col-lg-6 panel" style="background-color: rgba(255, 255, 255, 0.75);">
 					<div class="panel-body">
-			`			<img style="width: 500px;" src="../codingchamp/img/de liza.jpg">
+			`			<img style="width: 70%;" src="img/de-liza.jpg">
 					</div>
 				</div>
                 <div class="col-lg-6 text-left" style="">
@@ -419,7 +419,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <span class="copyright" style="color: #fff;">Copyright &copy; Coding Champ 2015</span>
+                    <span class="copyright" style="color: #fff;">Copyright &copy; Codingcamp 2015</span>
                 </div>
             </div>
         </div>
